objects/engage_reports__Engage_Contact_Stat__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data tool in the SDO to insert records</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>engage_reports__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Composite_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>engage_reports__Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engage_reports__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engage Contact Stats</relationshipLabel>
        <relationshipName>Engage_Contact_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>engage_reports__Engage_Send__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Engage Send</label>
        <referenceTo>engage_reports__Engage_Send__c</referenceTo>
        <relationshipLabel>Engage Contact Stats</relationshipLabel>
        <relationshipName>Engage_Contact_Stats</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>engage_reports__Hard_Bounces__c</fullName>
        <label>Hard Bounces</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Hour__c</fullName>
        <label>Hour</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engage_reports__Opens__c</fullName>
        <label>Opens</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Sends__c</fullName>
        <label>Sends</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Soft_Bounces__c</fullName>
        <label>Soft Bounces</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Version__c</fullName>
        <label>Version</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Engage Contact Stat</label>
    <nameField>
        <label>Engage Contact Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Contact Stats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>